--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
         </div>
 
-        <form action="https://formspree.io/f/mabcdxyz" method="POST" class="mt-8 flex flex-col gap-3 sm:flex-row">
+        <form action="https://formspree.io/f/mwprgkrg" method="POST" class="mt-8 flex flex-col gap-3 sm:flex-row">
           <label class="sr-only" for="email">Email address</label>
           <input id="email" name="email" type="email" required placeholder="you@example.com" autocomplete="email" inputmode="email" class="w-full rounded-xl border border-neutral-300 bg-white px-4 py-3 text-base outline-none ring-amber-500/20 focus:border-amber-500 dark:border-neutral-700 dark:bg-neutral-950" />
           <button type="submit" class="rounded-xl bg-amber-500 px-5 py-3 font-semibold text-neutral-900 shadow-lg shadow-amber-500/30 transition hover:translate-y-[-1px] hover:shadow-xl active:translate-y-0">Notify me</button>
