--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
 
       <section class="mt-10 rounded-2xl border border-neutral-200/70 bg-white/80 p-6 shadow-xl backdrop-blur-md dark:border-neutral-800 dark:bg-neutral-900/60">
-        <h2 class="text-3xl font-extrabold sm:text-4xl">Lighting the way for pets in disasters</h2>
+        <h2 class="text-3xl font-extrabold sm:text-4xl">Lighting the way for pets during disasters</h2>
         <p class="mt-3 max-w-prose text-neutral-600 dark:text-neutral-300">Our full site is on the way. We’re building resources, training, and rapid‑response support to keep pets and their people safe before, during, and after disasters. Want a heads‑up when we launch?</p>
 
         <div class="mt-6 grid grid-cols-4 gap-3 sm:gap-4" id="countdown" aria-label="Countdown to site launch" hidden>
