--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   
       <section id="privacy" class="mt-10 rounded-2xl border border-neutral-200/70 bg-white/80 p-6 shadow-xl backdrop-blur-md dark:border-neutral-800 dark:bg-neutral-900/60">
         <h3 class="text-xl font-semibold">Privacy</h3>
-        <p class="mt-2 text-sm text-neutral-600 dark:text-neutral-300">If you submit your email address, we will use it only to notify you about our launch and FLPDR updates. You can unsubscribe at any time by replying to any message with “unsubscribe.” We do not sell or share your information.</p>
+        <p class="mt-2 text-sm text-neutral-600 dark:text-neutral-300">If you submit your email address, we will use it only to notify you about our launch — we will not sell or share your information. You can unsubscribe at any time by replying to any message with “unsubscribe.” </p>
       </section>
     </main>
 
